--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#" onclick="home()">Home</a>
               </li>  
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link" href="#" onclick="signUp()">Sign Up</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Sign In</a>
@@ -37,6 +37,7 @@
         </div>
       </nav>
     <div class="container text-center">
+      <div id="home"> 
         <h1 class="display-4 mt-2 mb-4">Authentication</h1>
         <p class="lead">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. At recusandae placeat esse minima hic aut nihil beatae nesciunt saepe consequuntur rem atque animi quo facilis deserunt optio commodi perferendis, omnis, aperiam voluptatem. Tempora, accusantium. Magni veritatis ducimus, maxime nobis, aspernatur quas unde ratione labore molestiae nostrum obcaecati quae temporibus quidem.
@@ -48,8 +49,66 @@
         
         <p class="lead mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore culpa repellendus natus praesentium consectetur laborum nam, fugiat quo est minus reiciendis at nobis sint, facere perferendis corporis quibusdam, ipsum consequuntur dolorem. Dolores accusantium ullam eligendi facilis! Esse illo commodi voluptate, ipsam excepturi tempore aliquid ullam culpa nesciunt dicta, officiis porro temporibus iure accusamus beatae doloremque deleniti blanditiis quos illum molestias nostrum similique. Totam, pariatur! Quos sed officiis impedit, nobis quia ratione pariatur minima eos soluta est eius ipsum accusantium modi.</p>
     </div>
+    <div id="sign-up">
+      <form class="row g-3" id="sign-up-form">
+        <h1 class="display-4 form-title">Sign Up</h1>
+        <div class="col-md-6">
+          <label for="validationCustom01" class="form-label">First name</label>
+          <input type="text" class="form-control" id="validationCustom01" required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationCustom02" class="form-label">Last name</label>
+          <input type="text" class="form-control" id="validationCustom02" required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationCustomUsername" class="form-label">Email</label>
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="inputGroupPrepend">@</span>
+            <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationCustomUsername" class="form-label">Phone Number</label>
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="inputGroupPrepend">+91</span>
+            <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationCustomUsername" class="form-label">Password</label>
+            <input type="password" class="form-control" id="validationCustomUsername" required>
+          </div>
+        <div class="col-md-6">
+          <label for="validationCustomUsername" class="form-label">Confirm Password</label>
+            <input type="password" class="form-control" id="validationCustomUsername"required>
+          </div>
+         
+        <div class="col-12">
+          <div class="form-check" style="text-align:left;">
+            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+            <label class="form-check-label" for="invalidCheck">
+              Agree to terms and conditions
+            </label>
+          </div>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-dark" type="submit">Sign Up</button>
+        </div>
+      </form>
+    </div>
+    <div id="sign-in">
+
+    </div>
+  </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
     crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
